--- a/1.Lessions/Session-03-Props-Styles-Component/2.1Props.md
+++ b/1.Lessions/Session-03-Props-Styles-Component/2.1Props.md
@@ -1,61 +1,18 @@
-# Props
+# Props trong React
 
-## 🔥 Props là gì ?
+## 1. 🔍 Props là gì?
 
-- Props là các tham số được truyền vào một React components.
-- Props có thể sử dụng như là một HTML attribute
+**Props** là viết tắt của **properties** – giống như "tham số" được truyền vào component.
+Props giúp bạn:
 
-### 🌻 Tại sao lại cần đến Props?
+✅ Truyền dữ liệu từ **component cha** → **component con**
+✅ Tái sử dụng component với dữ liệu khác nhau
 
-Để trả lời câu hỏi này chúng ta cùng tạo ra 2 button trên như sau:
-
-```js
-function ButtonAddToCart() {
-  return <button type="button">Thêm giỏ hàng</button>;
-}
-function ButtonCall() {
-  return <button type="button">Gọi tư vấn</button>;
-}
-```
-
-Với kiến thức đã học trên thì bạn tạo ra 2 button trên với cách code như vậy.
-
-Tuy nhiên nó mất đi cái đặc tính nổi bật của component là TÁI SỬ DỤNG.
-
-Bạn nhận thấy rằng 2 button trên hoàn toàn giống nhau, nó chỉ khác phần `label` tên hiển thị.
-
-Thì chính lúc này ta cần đến một biến mà trong React gọi là `props`
-
-Chúng ta chỉ cần tạo ra 1 component
-
-```js
-//Button nhận vào một tham số có tên mặc định trong React là props ==> nó là một object
-function Button(props) {
-  return <button type="button">{props.label}</button>;
-}
-```
-
-Khi đó để tạo ra 2 button như demo thì trong App.tsx
-
-```js
-function App() {
-  return (
-    <>
-      <h1>Hello React Components</h1>
-      <Button label="Thêm giỏ hàng" />
-      <Button label="Gọi Tư Vấn" />
-    </>
-  );
-}
-```
-
-Trên đây ta sử dụng thuộc tính label='' thì React nó tự động thêm vào `props` một phần tử có key là `label` và value là giá trị trong dấu `=`
-
-Khi đó trong component Button chúng ta truy cập tới giá phần từ `label` để lấy giá trị của nó `props.label` như object bình thường.
+📦 Bạn có thể coi **component như một hàm**, và props là **đối số truyền vào**.
 
 ---
 
-### 🌻 Truyền Props cho một Component
+## 2. 📤 Truyền props từ component cha xuống component con
 
 React components sử dụng các props để giao tiếp với nhau. Component CHA cần truyền thông tin đến component CON bằng cách sử dụng props.
 
@@ -66,200 +23,222 @@ React components sử dụng các props để giao tiếp với nhau. Component 
 - Bạn chỉ được TRUYỀN dữ liệu từ CHA --> CON được biết đến với thuật ngữ `one-way data binding` (ràng buộc dữ liệu một chiều). Và không thể TRUYỀN theo hướng ngược lại.
 - Nếu component con muốn "gửi" thông tin ngược lại cho component cha, bạn cần sử dụng các callback functions hoặc sự kiện để truyền dữ liệu ngược lại thông qua các props, nhưng chính bản thân dữ liệu thì chỉ đi theo hướng từ cha sang con.
 
-Props sử dụng như HTML attributes, nhưng bạn có thể truyền bất kỳ giá trị JavaScript thông qua chúng, bao gồm cả objects, arrays, và functions
-
-Lấy lại ví dụ trên các bạn có thể thêm cho nó nhiều thuộc tính khác:
+Ví dụ:
 
 ```jsx
-//Component CON
-function ChildComponent(props) {
-  return <button type="button">{props.label}</button>;
+function Welcome(props) {
+  return <h1>Xin chào, {props.name}!</h1>;
 }
-//Component CHA
-function ParentComponent() {
-  /**
-   * CHA có dữ liệu cần truyền xuống cho CON
-   */
-  const fontSize = 18; //number
-  const bgColor = "#ff6700"; // string
-  const label = "Thêm vào giỏ hàng"; //string
-  const myCustomStyle = {
-    fontWeight: "bold",
-    textTransform: "uppercase",
-  }; //object
 
-  const handleClick = () => {
-    console.log("you clicked");
-  }; // arrow function
-
-  return (
-    <>
-      <h1>Hello React Components</h1>
-
-      <ChildComponent
-        onClick={handeClick}
-        fontSize={fontSize}
-        bgColor={bgColor}
-        label={label}
-        customStyle={myCustomStyle}
-      />
-    </>
-  );
+function App() {
+  return <Welcome name="Tomy" />;
 }
 ```
 
-Chúng ta nhận thấy Component Button nhận vào tham số `props`.
+👉 Ở đây, `App` truyền prop `name="Tomy"` cho `Welcome`.
 
-Bên trong thân nó chúng ta không hình dung được là nó đang có những thuộc tính nào để mà sử dụng.
+---
 
-Làm sao biết có label để `props.label` ?
+## 3. 📥 Truy cập và sử dụng props trong component con
 
-Khi đó chúng ta có một cách biết khác TƯỜNG MINH hơn bằng cách sử dụng cú pháp `ES6 Destructuring` như sau
+Có 2 cách:
 
-Xem bài viết React ES6 Destructuring: https://www.w3schools.com/react/react_es6_destructuring.asp
+### Cách 1: Dùng `props.<key>`
 
-```js
-//Cú pháp Destructuring một Object
-//props = {label, fontSize, bgColor, customStyle}
-//{label, fontSize, bgColor, customStyle} = props
-function Button({ label, fontSize, bgColor, customStyle }) {
-  return <button type="button">{props.label}</button>;
+```jsx
+function Greeting(props) {
+  return <p>Hello {props.name}!</p>;
+}
+```
+
+### Cách 2: Dùng destructuring (khuyên dùng)
+
+```jsx
+function Greeting({ name }) {
+  return <p>Hello {name}!</p>;
+}
+```
+
+✅ Gọn hơn, dễ đọc.
+
+---
+
+## 4. ✨ Truyền nhiều loại props
+
+Bạn có thể truyền:
+
+- **Chuỗi:** `title="Sách hay"`
+- **Số:** `age={18}`
+- **Boolean:** `active={true}`
+- **Mảng:** `tags={['react', 'js']}`
+- **Object:** `user={{ name: 'Tomy', email: 'tomy@mail.com' }}`
+
+```jsx
+function UserInfo({ user }) {
+  return <p>{user.name} - {user.email}</p>;
 }
 ```
 
 ---
 
-### 🌻 Cách truyền dữ liệu ngược từ CON --> CHA
+## 5. 🧠 Truyền function như là một prop
 
-Nếu bạn muốn gửi dữ liệu từ CON ra cho CHA bạn có thể sử dụng `callback function`
+Rất phổ biến khi muốn component con **kích hoạt hàm trong cha**:
 
 ```jsx
-/**
- * Con nhận vào một callback function
- * dưới dạng một phần tử của props
- */
-const Child = ({ onMessageChange }) => {
-  const sendMessageToParent = () => {
-    const message = "Hello from Child!";
-    // Dùng hàm từ CHA truyền vào để gửi thông tin (message) từ CON ra cho CHA
-    onMessageChange(message);
-  };
+function Button({ onClick }) {
+  return <button onClick={onClick}>Bấm tôi</button>;
+}
 
-  return (
-    <div>
-      <h2>Child Component</h2>
-      <button onClick={sendMessageToParent}>Send Message to Parent</button>
-    </div>
-  );
+function App() {
+  const handleClick = () => alert('Bạn vừa bấm!');
+  return <Button onClick={handleClick} />;
+}
+```
+
+✅ Đây gọi là truyền **callback function**.
+
+---
+
+## 6. 🌻 Tại sao lại cần đến Props?
+
+### 🎯 6.1. Truyền dữ liệu từ component cha sang component con
+
+🔸 Ví dụ:
+
+```jsx
+function Welcome({ name }) {
+  return <h1>Chào bạn, {name}!</h1>;
+}
+
+function App() {
+  return <Welcome name="Tomy" />;
+}
+```
+
+### 🔁 6.2. Tái sử dụng component với dữ liệu khác nhau
+
+Props giúp bạn viết 1 component nhưng dùng được nhiều lần với dữ liệu khác nhau:
+
+```jsx
+<Welcome name="Tomy" />
+<Welcome name="Linh" />
+```
+
+👉 Không cần tạo 2 component riêng.
+
+### 🎛 6.3. Làm component trở nên linh hoạt và có thể cấu hình
+
+Component trở nên như "hàm" có đối số, giúp bạn tùy chỉnh nội dung, hành vi, kiểu hiển thị,...
+
+Ví dụ:
+
+```jsx
+<Button label="Lưu" color="green" />
+<Button label="Xoá" color="red" />
+```
+
+➡️ Button giống nhau nhưng hiển thị khác nhờ props.
+
+### 🧠 6.4. Cho phép component con kích hoạt logic trong cha (qua callback)
+
+Props không chỉ là dữ liệu – bạn còn có thể truyền hàm (callback):
+
+```jsx
+function Button({ onClick }) {
+  return <button onClick={onClick}>Click me</button>;
+}
+
+function App() {
+  const handleClick = () => alert("Clicked!");
+  return <Button onClick={handleClick} />;
+}
+```
+
+Kết luận:
+
+| Lý do cần Props                  | Ý nghĩa                                                            |
+| -------------------------------- | ------------------------------------------------------------------ |
+| Truyền dữ liệu từ cha xuống      | Component cha có thể điều khiển nội dung hiển thị của con          |
+| Tái sử dụng component            | Viết một lần, dùng nhiều nơi khác nhau                             |
+| Tạo component linh hoạt          | Thay đổi kiểu hiển thị, logic mà không cần sửa bên trong component |
+| Cho phép giao tiếp từ con về cha | Truyền callback từ cha xuống để con gọi hàm khi xảy ra sự kiện     |
+
+---
+
+## 7. 🔒 Props là immutable
+
+❌ Bạn **không được sửa đổi props** trong component con:
+
+```jsx
+props.name = 'abc'; // ❌ Sai – props là read-only
+```
+
+✅ Nếu muốn thay đổi → dùng `state` trong component cha và truyền prop mới.
+
+---
+
+## 8. ✅ Best Practices khi dùng props
+
+- Sử dụng **destructuring** để dễ đọc
+- Đặt tên props rõ ràng: `user`, `onLogin`, `isVisible`
+- Không thay đổi props bên trong con
+- Có thể dùng mặc định (`defaultProps`) nếu cần
+
+---
+
+## 9. 🛡 Sử dụng TypeScript với props
+
+```tsx
+type UserProps = {
+  name: string;
+  age: number;
 };
 
-const Parent = () => {
-  // Hàm này sẽ nhận dữ liệu message từ con
-  const handleMessageChange = (message) => {
-    console.log("Message from Child:", message);
-  };
-
-  return (
-    <div>
-      <h1>Parent Component</h1>
-      {/* Truyền hàm xuống component con qua props */}
-      <Child onMessageChange={handleMessageChange} />
-    </div>
-  );
-};
-```
-
----
-
-### 🌻 Default Props
-
-`defaultProps` được ngưng sử dụng từ React 18.3.1.
-
-Thay vào đó bạn có thể đặt giá trị mặc định cho props như sau:
-
-```ts
-function Button({ label = "Default" }: { label?: string }) {
-  return <button type="button">{label}</button>;
+function UserCard({ name, age }: UserProps) {
+  return <div>{name} - {age}</div>;
 }
 ```
 
----
-
-### 🌻 Props Children
-
-Bạn có thể lồng các component vào với nhau giống như các thẻ HTML vậy, điều đó làm cho JSX trông giống với HTML. Và các component hay nội dung được lồng ở trong các component được gọi là children
-
-**Child component**
-
-```js
-<Dad>
-  <Son />
-  <Son />
-  <Son />
-</Dad>
-```
-
-Ở đây ta có 3 component `<Son />`, chúng sẽ là props.children của component `<Dad />`
-
-Khi đó `<Dad />` sẽ trong như thế này
-
-```js
-function Dad(props){
-  return (
-    <div>
-      {props.children}
-    <div>
-  )
-}
-//hoặc
-function Dad({children}){
-  return (
-    <div>
-      {children}
-    <div>
-  )
-}
-```
-
-**Everything can be a child**
-
-Children trong React thì không nhất thiết phải là cái gì, nó có thể là 1 component hay nhiều component, 1 thẻ h1 hoặc nhiều thẻ h1, 1 chữ hoặc nhiều chữ...
-
-```js
-<Dad>
-  <h1>Hello Children</h1>
-</Dad>
-```
-
-Bạn chỉ cần nhớ một điều:
-
-Children là phần nội dung lòng vào giữa một component.
+✅ Giúp code tự động gợi ý, tránh lỗi truyền sai kiểu.
 
 ---
 
-===============================
+## 10. 🎁 `props.children` là gì?
 
-### 🌻 Props với TypeScript
+### 📌 Định nghĩa
 
-Để code Props với cú pháp của TypeScript bạn làm như ví dụ sau:
+`props.children` là **nội dung nằm giữa thẻ mở và thẻ đóng** của một component.
+
+📦 Dùng để tạo **component bao bọc (wrapper)** hoặc **layout**, nơi bạn không biết trước nội dung con sẽ là gì.
+
+### 🧪 Ví dụ
 
 ```jsx
-/**
- * Đơn giản là bạn định hình kiểu dữ liệu cho các thuộc tính của props
- */
-type TButton = {
-  label: string;
-  fontSize: stringl
-  bgColor: string;
-  customStyle: {}
+function Wrapper({ children }) {
+  return <div className="box">{children}</div>;
 }
-function Button({ label, fontSize, bgColor, customStyle } : TButton) {
-  return <button type="button">{props.label}</button>;
+
+function App() {
+  return (
+    <Wrapper>
+      <h1>Xin chào</h1>
+      <p>Đây là nội dung nằm trong Wrapper</p>
+    </Wrapper>
+  );
 }
 ```
 
-Tham khảo sử dụng Prop với TypeScript
+➡️ Output:
 
-- <https://github.com/typescript-cheatsheets/react#basic-prop-types-examples>
+```html
+<div class="box">
+  <h1>Xin chào</h1>
+  <p>Đây là nội dung nằm trong Wrapper</p>
+</div>
+```
 
-- <https://cinthialandia.com/blog/props/>
+### ✅ Lợi ích khi dùng `children`
+
+- Tạo các component có thể tái sử dụng cho nhiều nội dung khác nhau
+- Làm layout, modal, card, button wrapper...
