--- a/1.Lessions/Session-11-Global-State-Management/Manage-State/4.Zustand.md
+++ b/1.Lessions/Session-11-Global-State-Management/Manage-State/4.Zustand.md
@@ -283,6 +283,18 @@ Thay vì bạn code như thế này
 
 Tối ưu lại với selector như sau:
 
+✅ Cách 1: Tách từng selector
+
+```js
+const increment = useCounterStore((state) => state.increment);
+const decrement = useCounterStore((state) => state.decrement);
+const reset = useCounterStore((state) => state.reset);
+const increaseBy = useCounterStore((state) => state.increaseBy);
+
+```
+
+✅ Cách 2: Dùng shallow comparison để destructuring nhiều field:
+
 ```js
 import { shallow } from 'zustand/shallow'; // Import shallow từ zustand/shallow
 
@@ -299,6 +311,8 @@ import { shallow } from 'zustand/shallow'; // Import shallow từ zustand/shallo
   );
 
 ```
+
+Xem thêm: <https://zustand.docs.pmnd.rs/apis/shallow>
 
 **Giải thích các thay đổi**:
 
